--- a/rulebook/2-Players/2-Players.tex
+++ b/rulebook/2-Players/2-Players.tex
@@ -219,7 +219,7 @@
 		\item The team’s primary captain or Assistant GM becomes Interim GM. Their status as a player is unaffected. The League Operation Managers or Moderators can choose the Interim GM at their sole discretion if the primary captain or Assistant-GM is not suitable for any reason.
 	\end{deepEnumerate}
 	\item Planned GM Departure
-	\begin{deepenumerate}
+	\begin{deepEnumerate}
 		\item Planned departure here is defined as the GM putting forth a plan and/or informing LOM or Moderators about their intentions to depart from being the General Manager of their team for any reason. 
 		\item The departing General Manager shall, if possible, remain the GM of the team until a suitable candidate is selected to replace them.
 		\begin{deepEnumerate}
@@ -275,6 +275,7 @@
 		\item 80% or 10 rostered players vote no confidence. 
 		\item 2 games lost to Auto-K/BB forfeit or 10 Auto-K/BBs in any 4 game period.
 		\item 75% of all GMs vote no confidence.
+	\end{deepEnumerate}
 \end{deepEnumerate}
 
 \subsection{Team Leadership}
