google said i should get rid of the .tex

--- a/rulebook/rulebook.tex
+++ b/rulebook/rulebook.tex
@@ -74,24 +74,24 @@
 \hypersetup{linkcolor=blue}
 \pagebreak
 
-\input{0-Introduction/0-Introduction.tex}
+\input{0-Introduction/0-Introduction}
 
 % If the intro grows, there should probably be \pagebreak here
 
 \nonumsection{Rules}{sec:rules}
 
-\input{1-OperationAndConduct/1-OperationAndConduct.tex}
+\input{1-OperationAndConduct/1-OperationAndConduct}
 \pagebreak
-\input{2-Players/2-Players.tex}
+\input{2-Players/2-Players}
 \pagebreak
-\input{3-Gameplay/3-Gameplay.tex}
+\input{3-Gameplay/3-Gameplay}
 \pagebreak
-\input{4-MiLR/4-MiLR.tex}
+\input{4-MiLR/4-MiLR}
 \pagebreak
 
 % Appendixes
-\input{A-RangeSystem/A-RangeSystem.tex}
+\input{A-RangeSystem/A-RangeSystem}
 \pagebreak
-\input{A2-Committee/A2-Constitution.tex}
+\input{A2-Committee/A2-Constitution}
 
 \end{document}
