Add CI to build rulebook

--- a/rulebook/1-OperationAndConduct/1-OperationAndConduct.tex
+++ b/rulebook/1-OperationAndConduct/1-OperationAndConduct.tex
@@ -5,9 +5,9 @@
 \subsection{The Office of the Commissioners}
 \begin{deepEnumerate}
 	\item The Office of the Commissioners (OOTC) is responsible for administrating and moderating the league.
-	\item The OOTC consists of up to 13 members, 5 "Moderators", 3 "League Operation Managers" and 5 "Technicians".
+\item The OOTC consists of a minimum of 11 members, a minimum of 3 "Moderators", 3 "League Operation Managers" and 5 "Technicians".
 	\begin{deepEnumerate}
-		\item There are to be 5 equal, elected Moderators. whose primary responsibilities are to moderate the league discord and subreddit.
+		\item There are to be a minimum of 3 equal, appointed Moderators. whose primary responsibilities are to moderate the league discord and subreddit.
 		\item There are to be 3 League Operation Managers. Their primary responsibilities are to head league operations
 		and ensure the creation and execution of the All Star Break plan, offseason timeline, offseason plan, offseason recruitment, and any possible expansion plan 
 		as outlined in Section 1.2.
@@ -20,18 +20,17 @@
 			\item Website Manager, responsible for maintaining, administrating and overseeing development of the league website, \url{https://redditball.com}.
 		\end{deepEnumerate}
 	\end{deepEnumerate}
-	\item Moderators will be elected in two cycles per season.
+	\item Moderators will be appointed by League Operations Managers and current moderators as needed.
 	\begin{deepEnumerate}
-		\item One election will appoint 3 members to start Session 4 of each season.
-		\item The other election will appoint 2 members to start Session 13 of each season.
-		\item All players and GMs of the community will be eligible to vote.
+		\item A minimum of 3 moderators must be in place at all times. There should always be an odd number.
+		\item League Operations Managers and moderators can choose to appoint additional moderators on an as-needed basis. They will do so via internal vote. All League Operations Managers and moderators will vote, excluding any members that would be leaving as a result of the new appointment.
 	\end{deepEnumerate}
 	\item League Operation Managers will be elected in one cycle per season.
 	\begin{deepEnumerate}
 		\item One election will appoint 3 League Operation Managers to start Session 8 of each season.
 		\item All players and GMs of the community will be eligible to vote.
-		\item A vote of confidence will be held at the start of sessions 3 and 13 for the three League Operation Managers. Any League Operation Manager with less than
-		 45\% approval shall be removed and an emergency election called to fill the vacancy.
+		\item A vote of confidence will be held at the start of sessions 3 and 13 for  all members of OOTC. If 15 members of committee call for a vote of confidence within the first month of appointment, a vote can occur. Any  member of OOTC with less than
+		 45\% approval shall be removed. In the case of an LOM being removed, an emergency election called to fill the vacancy.
 	\end{deepEnumerate}
 	\item In the event that a Moderator or League Operations Manager resigns, is removed, or is otherwise no longer capable of fulfilling the role, the following
 	procedure shall take place: 
@@ -50,8 +49,15 @@
 	\begin{deepEnumerate}
 		\item Must have been an active (non-retired) member of the community for 6 months prior to the election before being elected.
 		\item Must maintain a presence in the league discord for at least 1 month prior to the election, and for the duration of their time in office. 
-		Leaving the discord while a Moderator or League Operations Manager will be considered resignation.
+		Leaving the discord while a Moderator or League Operations Manager without properly announcing hiatus will be considered resignation.
 		\item Must not have been removed from the Moderator role or the League Operations Manager role by the committee.	
+		\item Any member of OOTC may elect to go on hiatus.
+		\begin{deepEnumerate}
+			\item A hiatus must not last longer than 2 weeks.
+			\item Players are still eligible to play during this time, if they choose.
+			\item Failure to return from hiatus after the two week period without contacting the OOTC will be considered resignation.
+			\end{deepEnumerate}
+		\item If necessary, OOTC may appoint an interim Mod or Tech to fill the respective position during hiatus
 	\end{deepEnumerate}
 	\item At any point, the committee is capable of impeaching a Moderator or League Operation Manager, forcing an immediate replacement process.
 	This will require a 2/3rds vote to pass.
