--- a/rulebook/2-Players/2-Players.tex
+++ b/rulebook/2-Players/2-Players.tex
@@ -216,7 +216,11 @@
 	\item Unplanned GM Departure
 	\begin{deepEnumerate}
 		\item Unplanned departure here is defined as the GM unexpectedly leaving the GM position for any reason, including but not limited to stepping down, retiring, or being removed via mutiny.
-		\item The team’s primary captain or Assistant GM becomes Interim GM. Their status as a player is unaffected. The League Operation Managers or Moderators can choose the Interim GM at their sole discretion if the primary captain or Assistant-GM is not suitable for any reason.
+		\item The League Operation Managers will choose an Interim GM from the active roster.
+		\begin{deepEnumerate}
+			\item Any Interim GM appointed by an Unplanned Departure is unable to make any roster moves or change player appointments without approval from the LOM while the search for a new GM is ongoing.
+			\item Any Interim GM appointed by an Unplanned Departure shall be made aware that their appointment is by no means permanent and that they will be removed if a different candidate is selected for the Primary GM position.
+		\end{deepEnumerate}
 	\end{deepEnumerate}
 	\item Planned GM Departure
 	\begin{deepEnumerate}
@@ -226,22 +230,29 @@
 			\item If the departing GM is unable to maintain their position until a new candidate is selected, the departure shall be classed as unplanned.
 		\end{deepEnumerate}
 	\end{deepEnumerate}
-	\item Internal GM Replacement
+	\item GM Replacement Procedure
 	\begin{deepEnumerate}
 		\item A team with a departing GM may put forth a candidate(s) to replace them
-		\item An internal GM Replacement candidate must currently be on the team’s active roster, have majority approval from the League Operations Managers, and either:
 		\begin{deepEnumerate}
-			\item Have the League Operations Managers run a vote open to all team members where at least 75% of those who voted are in favor of the candidate.
-			\item Be the current Assistant GM or Interim GM of the team, with at least 3 sessions or 30 days of being in either position AND have the League Operations Managers run a vote open to all team members where at least 51% of those who voted are in favor of the candidate.
+			\item It is expected of the team to determine who to submit as the Internal GM Replacement candidate themselves, and then inform the League Operations Managers.
+			\item If the team cannot collectively come to a decision on who to put forth within 7 days of the original GM’s departure, the Internal GM Replacement procedure shall be skipped and the GM Replacement Voting Procedure shall continue.
+			\item An internal GM Replacement candidate must currently be on the team’s active roster, have majority approval from the League Operations Managers, and either:
+			\begin{deepEnumerate}
+				\item Have the League Operations Managers run a vote open to all team members where at least 75\% of those who voted are in favor of the candidate.
+				\item Be the current Assistant GM or Interim GM of the team, with at least 3 sessions or 30 days of being in either position AND have the League Operations Managers run a vote open to all team members where at least 51\% of those who voted are in favor of the candidate.
 		\end{deepEnumerate}
+		\item If the team cannot collectively come to a decision on who to put forth within 7 days of the original GM’s departure, the Internal GM Replacement procedure shall be skipped and the GM Replacement Voting Procedure shall continue.
 	\end{deepEnumerate}
-	\item GM Replacement Voting Procedure
-	\begin{deepEnumerate}
-		\item A full team vote with 3 available candidates shall occur.
+	\item If the team is unable to replace a GM internally, a full team vote with 3 available candidates shall occur.
 		\begin{deepEnumerate}
 			\item League Operations Managers will select 3 candidates for a team vote.
 			\begin{deepEnumerate}
 				\item These candidates can be from any team’s roster, including the team who is having their GM replaced.
+				\item The League Operations Managers will create and maintain a list of candidates from external sources and include up to 3 internal candidates for consideration.
+				\begin{deepEnumerate}
+					\item This list of candidates will be voted on by League Operations Managers via Ranked Choice Voting to establish a ranking. The top 3 candidates will be selected to present to the team for consideration.
+				\end{deepEnumerate}
+				\item The League Operations Managers may consult whomever they wish on the replacement of a General Manager, but only the League Operations Managers shall vote on who becomes a candidate and is submitted to the team.
 			\end{deepEnumerate}
 			\item All currently rostered players on the team are eligible to vote and receive one vote each.
 			\begin{deepEnumerate}
@@ -256,6 +267,7 @@
 			\item Once the vote is officially closed, all votes shall be tallied up by the League Operations Managers, and the candidate with the most votes shall become the new GM.
 			\begin{deepEnumerate}
 				\item If there is a tie between 2 leading candidates, the candidate with the lowest percentage of votes will be removed and a runoff vote will occur between the two tied candidates.
+				\item If there is a tie between all three candidates, the voting procedure shall be restarted with 3 new candidates submitted to the team.
 			\end{deepEnumerate}
 		\end{deepEnumerate}
 	\end{deepEnumerate}
@@ -272,18 +284,18 @@
 	\item The Mutiny Clause: Additional conditions for GM removal 
 	\begin{deepEnumerate}
 		\item 3 missed lineup submissions.
-		\item 80% or 10 rostered players vote no confidence. 
+		\item 80\% or 10 rostered players vote no confidence. 
 		\item 2 games lost to Auto-K/BB forfeit or 10 Auto-K/BBs in any 4 game period.
-		\item 75% of all GMs vote no confidence.
+		\item 75\% of all GMs vote no confidence.
 	\end{deepEnumerate}
 \end{deepEnumerate}
 
 \subsection{Team Leadership}
 \begin{deepEnumerate}
 	\item GMs may designate a primary team captain and up to two secondary team captains.
-	These players must be disclosed to the League Operation Managers and they can be added or removed at any time.
+	These players must be disclosed to the League Operation Managers and they may be added or removed at any time.
 	\begin{deepEnumerate}
-		\item Team captains can make emergency substitutions and set emergency lineups in the case of an unavailable GM
+		\item Team captains may make emergency substitutions and set emergency lineups in the case of an unavailable GM
 	(see \hyperref[sec:substitutions]{Substitutions} and \hyperref[sec:captain lineups]{Captain Lineups}).
 		\begin{deepEnumerate}
 			\item Umps should not initiate contact with team captains except in extreme cases or otherwise stated in the rulebook.
@@ -293,14 +305,17 @@
 	\begin{deepEnumerate}
 		\item Assistant GM’s take up the Primary Captain spot for a team and have all the same privileges and rights as the GM except:
 		\begin{deepEnumerate}
-			\item Assistant GM’s can be added or removed at any time by the GM.
-			\item GM’s can place limitations on the actions Assistant GM’s can make as they see fit.
+			\item Assistant GM’s may be added or removed at any time by the GM.
+			\item GM’s may place limitations on the actions Assistant GM’s can make as they see fit.
+			\begin{deepEnumerate}
+				\item GM’s will be responsible for policing the limitations they place on their assistant GMs.
+			\end{deepEnumerate}
 			\item League Operations Managers reserve the right to reject any potential Assistant GM.
 		\end{deepEnumerate}
 	\end{deepEnumerate}
 	\item GM’s may designate Interim GM’s
 	\begin{deepEnumerate}
-		\item If a GM knows they will be unable to fulfil their role for a certain amount of time, they can designate a player on their active roster to be an Interim GM.
+		\item If a GM knows they will be unable to fulfil their role for a certain amount of time, they may designate a player on their active roster to be an Interim GM.
 		\begin{deepEnumerate}
 			\item Interim GM’s are expected to set lineups and to maintain and manage their team while the GM is unable to do so.
 		\end{deepEnumerate}
