--- a/rulebook/rulebook.tex
+++ b/rulebook/rulebook.tex
@@ -59,7 +59,7 @@
 % Document Headers
 \title{MLR Rulebook}
 \author{/r/fakebaseball}
-\date{Last Revision: March 22, 2021\\PDF Built: \today}
+\date{Last Revision: January 8, 2022\\PDF Built: \today}
 
 % Document Structure
 % Please don't add content in here,
@@ -74,24 +74,24 @@
 \hypersetup{linkcolor=blue}
 \pagebreak
 
-\input{0-Introduction/0-Introduction}
+\input{0-Introduction/0-Introduction.tex}
 
 % If the intro grows, there should probably be \pagebreak here
 
 \nonumsection{Rules}{sec:rules}
 
-\input{1-OperationAndConduct/1-OperationAndConduct}
+\input{1-OperationAndConduct/1-OperationAndConduct.tex}
 \pagebreak
-\input{2-Players/2-Players}
+\input{2-Players/2-Players.tex}
 \pagebreak
-\input{3-Gameplay/3-Gameplay}
+\input{3-Gameplay/3-Gameplay.tex}
 \pagebreak
-\input{4-MiLR/4-MiLR}
+\input{4-MiLR/4-MiLR.tex}
 \pagebreak
 
 % Appendixes
-\input{A-RangeSystem/A-RangeSystem}
+\input{A-RangeSystem/A-RangeSystem.tex}
 \pagebreak
-\input{A2-Committee/A2-Constitution}
+\input{A2-Committee/A2-Constitution.tex}
 
 \end{document}
